<resources>
    <string name="app_name_long">World Boardgaming Championships</string>
    <string name="app_name_short">WBC</string>
    <string name="email">dev@boardgamers.org</string>
    <string name="notification_title">WBC: Events starting soon</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="create_event">Create Event</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="share">Share</string>
    <string name="share_schedule">Share Schedule</string>
    <string name="map">Hotel Map</string>
    <string name="user_finishes">My Finishes</string>
    <string name="user_notes">My Notes</string>
    <string name="user_events">My Events</string>
    <string name="edit_event">Edit Event</string>
    <string name="add_event">Add Event</string>
    <string name="delete_all">Delete All</string>
    <string name="star">Star</string>
    <string name="search">Search</string>
    <string name="search_hint">Search title or format</string>
    <string name="changes_dialog_title">Schedule Changes</string>
    <string name="continuous_dialog_title">Continuous Events</string>
    <string name="continuous_dialog_message">The first round for continuous events starts
        at the designated time. All subsequent rounds start at a time designated by the GM.
        Starting times for these rounds shown in the app are merely approximations based on
        the first round start time and duration, and should be used to
        better plan a schedule and receive early notifications for each round.</string>
    <string name="beta_schedule_dialog_title">Schedule Beta Version</string>
    <string name="beta_schedule_dialog_message">The schedule is currently in a beta version
        and may be subject to further changes. Until the schedule is finalized, we advise you
        to not spend too much time creating a schedule, as your data will be erased if major
           updates are made to the schedule in the coming weeks.</string>
    <string name="schedule_changed_dialog_title">Schedule Changed</string>
    <string name="schedule_changed_dialog_message">Unfortunately
        the schedule has undergone many changes and the app\'s data needs to be completely
        reset to accommodate the new schedule. We apologize for any inconvenience this may
        have caused, but hopefully you took notice of previous message stating that the schedule is
        still in its beta version!</string>
    <string name="reset">Reset</string>
    <string name="reset_message">Are you sure you want to reset all your settings?</string>
    <string name="initial_dialog_text">Star events in the full schedule to add them to your schedule</string>
    <string name="initial_load_title">Saving events on device</string>
    <string name="activity_tournament">Tournament</string>
    <string name="activity_event">Event</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_filter">Filter Schedule</string>
    <string name="activity_help">Help</string>
    <string name="activity_about">About</string>
    <string name="activity_splash">Saving schedule to device&#8230;</string>
    <string name="activity_import_schedule">Import Schedule</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="select_tournament">Select Tourneys</string>
    <string name="deselect_tournament">Deselect Tourneys</string>
    <string name="title">Title</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="gm">GM</string>
    <string name="format">Format</string>
    <string name="class_string">Class</string>
    <string-array name="duration">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="event">Event</string>
    <string name="ef_tournament_text">View related events</string>
    <string name="box_iv">Tournament box image</string>
    <string name="note_hint">Add event note</string>
    <string name="finish">Finish</string>
    <string name="event_note">Event Note</string>
    <string name="preview">Preview</string>
    <string name="report">Report</string>
    <string name="zero">-</string>
    <string name="map_overlay_on">Room\nshowing</string>
    <string name="map_overlay_off">Room\nhidden</string>
    <string-array name="finish_strings">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
    </string-array>
    <string name="ce_days">Days</string>
    <string name="ce_at">At</string>
    <string name="ce_for">for</string>
    <string name="ce_hours">hours</string>
    <string name="add">Add</string>
    <string name="mf_upstairs">Map of upstairs</string>
    <string name="mf_downstairs">Map of downstairs</string>
    <string name="ds_tournament">Tournaments</string>
    <string name="ds_tournament_hint">Enter tournament</string>
    <string name="ds_formats">Formats</string>
    <string name="ds_rooms">Rooms</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notify">Event notifications</string>
    <string name="settings_notify_summary">Notify me before my starred events start</string>
    <string name="settings_notify_type">Notification type</string>
    <string name="settings_notify_time">Minutes before event starts</string>
    <string name="settings_schedule">Schedules</string>
    <string name="settings_schedule_select">Select schedule</string>
    <string name="settings_schedule_import">Import</string>
    <string name="settings_schedule_import_summary">Load a WBC schedule from .wbc file</string>
    <string name="settings_schedule_merge">Save as My Schedule</string>
    <string name="settings_schedule_delete">Delete</string>
    <string name="settings_schedule_export">Export and share</string>
    <string name="settings_schedule_name_check">wbc_data_file_2015</string>
    <string name="schedule_import_merge_message">How do you want to merge with My Schedule?</string>
    <string name="schedule_import_neither">Neither</string>
    <string name="schedule_import_merge">Merge</string>
    <string name="schedule_import_replace">Replace</string>
    <string name="schedule_import_name_message">Enter a name for the schedule (N/A if merging)</string>
    <string name="schedule_import_name_hint">Schedule name</string>
    <string name="user_data_file">UserDataPrefFile</string>
    <string name="pref_key_notify">notify_starred</string>
    <string name="pref_key_notify_time">notify_time</string>
    <string name="pref_key_notify_type">notify_type</string>
    <string name="pref_key_schedule_select">schedule_select</string>
    <string name="pref_key_schedule_import">schedule_import</string>
    <string name="pref_key_schedule_merge">schedule_merge</string>
    <string name="pref_key_schedule_delete">schedule_delete</string>
    <string name="pref_key_schedule_export">schedule_export</string>
    <string-array name="settings_notify_type_entries">
        <item>Vibrate</item>
        <item>Sound</item>
        <item>Both</item>
    </string-array>
    <string-array name="settings_notify_type_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="hours_12">
        <item>7 AM</item>
        <item>8 AM</item>
        <item>9 AM</item>
        <item>10 AM</item>
        <item>11 AM</item>
        <item>12 PM</item>
        <item>1 PM</item>
        <item>2 PM</item>
        <item>3 PM</item>
        <item>4 PM</item>
        <item>5 PM</item>
        <item>6 PM</item>
        <item>7 PM</item>
        <item>8 PM</item>
        <item>9 PM</item>
        <item>10 PM</item>
        <item>11 PM</item>
        <item>12 AM</item>
    </string-array>
    <string-array name="hours_24">
        <item>0700</item>
        <item>0800</item>
        <item>0900</item>
        <item>1000</item>
        <item>1100</item>
        <item>1200</item>
        <item>1300</item>
        <item>1400</item>
        <item>1500</item>
        <item>1600</item>
        <item>1700</item>
        <item>1800</item>
        <item>1900</item>
        <item>2000</item>
        <item>2100</item>
        <item>2200</item>
        <item>2300</item>
        <item>2400</item>
    </string-array>
    <string-array name="daysForParsing">
        <item>2015&#45;08&#45;01</item>
        <item>2015&#45;08&#45;02</item>
        <item>2015&#45;08&#45;03</item>
        <item>2015&#45;08&#45;04</item>
        <item>2015&#45;08&#45;05</item>
        <item>2015&#45;08&#45;06</item>
        <item>2015&#45;08&#45;07</item>
        <item>2015&#45;08&#45;08</item>
        <item>2015&#45;08&#45;09</item>
    </string-array>
    <string-array name="days">
        <item>PC Sa 8/1</item>
        <item>PC Su 8/2</item>
        <item>Mo 8/3</item>
        <item>Tu 8/4</item>
        <item>We 8/5</item>
        <item>Th 8/6</item>
        <item>Fr 8/7</item>
        <item>Sa 8/8</item>
        <item>Su 8/9</item>
    </string-array>
    <string-array name="rooms_upstairs">
        <item>Conestoga 1</item>
        <item>Conestoga 2</item>
        <item>Conestoga 3</item>
        <item>Good Spirits Bar</item>
        <item>Heritage</item>
        <item>Lampeter</item>
        <item>Laurel Grove</item>
        <item>Poolside Pavilion</item>
        <item>Showroom</item>
        <item>Vista CD</item>
        <item>Wheatland</item>
    </string-array>
    <string-array name="rooms_downstairs">
        <item>B Corridor</item>
        <item>Ballroom A</item>
        <item>Ballroom A &amp; B</item>
        <item>Ballroom B</item>
        <item>Cornwall</item>
        <item>Hopewell</item>
        <item>Kinderhook</item>
        <item>Limerock</item>
        <item>Marietta</item>
        <item>New Holland</item>
        <item>Paradise</item>
        <item>Strasburg</item>
        <item>Terrace 1</item>
        <item>Terrace 2</item>
        <item>Terrace 3</item>
        <item>Terrace 4</item>
        <item>Terrace 5</item>
        <item>Terrace 6</item>
        <item>Terrace 7</item>
    </string-array>
    <string-array name="rooms_available">
        <item>B Corridor</item>
        <item>Ballroom A</item>
        <item>Ballroom A &amp; B</item>
        <item>Ballroom B</item>
        <item>Conestoga 1</item>
        <item>Conestoga 2</item>
        <item>Conestoga 3</item>
        <item>Cornwall</item>
        <item>Good Spirits Bar</item>
        <item>Heritage</item>
        <item>Hopewell</item>
        <item>Kinderhook</item>
        <item>Lampeter</item>
        <item>Laurel Grove</item>
        <item>Limerock</item>
        <item>Marietta</item>
        <item>New Holland</item>
        <item>Paradise</item>
        <item>Poolside Pavilion</item>
        <item>Showroom</item>
        <item>Strasburg</item>
        <item>Terrace 1</item>
        <item>Terrace 2</item>
        <item>Terrace 3</item>
        <item>Terrace 4</item>
        <item>Terrace 5</item>
        <item>Terrace 6</item>
        <item>Terrace 7</item>
        <item>Vista CD</item>
        <item>Wheatland</item>
    </string-array>
    <string name="about_developer_text">Created by Kevin Broh-Kahn\ndev@boardgamers.org</string>
    <string name="about_others_text">Schedule file courtesy of Craig Trader\nMaps courtesy of Jason Long</string>
    <string name="how_to_help">Select a help topic to expand and show info</string>
</resources>