<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:key="pref_key_notifications"
		android:title="@string/settings_notifications">

		<CheckBoxPreference
			android:defaultValue="false"
			android:key="@string/pref_key_notify"
			android:summary="@string/settings_notify_summary"
			android:title="@string/settings_notify"/>

		<org.boardgamers.wbc.DialogPreferenceNumberPicker
			android:dependency="notify_starred"
			android:key="@string/pref_key_notify_time"
			android:persistent="true"
			android:title="@string/settings_notify_time"/>

		<ListPreference
			android:defaultValue="2"
			android:dependency="notify_starred"
			android:entries="@array/settings_notify_type_entries"
			android:entryValues="@array/settings_notify_type_values"
			android:key="@string/pref_key_notify_type"
			android:title="@string/settings_notify_type"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:key="pref_key_schedules"
		android:title="@string/settings_schedule">

		<org.boardgamers.wbc.DialogPreferenceSchedulePicker
			android:key="@string/pref_key_schedule_select"
			android:persistent="true"
			android:title="@string/settings_schedule_select"/>

		<Preference
			android:key="@string/pref_key_schedule_import"
			android:summary="@string/settings_schedule_import_summary"
			android:title="@string/settings_schedule_import"/>

		<Preference
			android:key="@string/pref_key_schedule_delete"
			android:title="@string/settings_schedule_delete"/>

		<Preference
			android:key="@string/pref_key_schedule_merge"
			android:title="@string/settings_schedule_merge"/>

		<Preference
			android:key="@string/pref_key_schedule_export"
			android:title="@string/settings_schedule_export"/>

	</PreferenceCategory>
</PreferenceScreen>