<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <TextView
    android:id="@+id/ef_tournament_link"
    style="@style/text_with_link"
    android:gravity="center"
    android:text="@string/ef_tournament_text"
    android:visibility="invisible"/>

  <TextView
    android:id="@+id/ef_title"
    style="@style/medium_text"
    android:gravity="center"
    android:text="@string/title"/>

  <TextView
    android:id="@+id/ef_day"
    style="@style/medium_text"
    android:gravity="center"
    android:text="@string/day"/>

  <TextView
    android:id="@+id/ef_time"
    style="@style/medium_text"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:drawablePadding="@dimen/default_margin"
    android:text="@string/time"/>

  <TextView
    android:id="@+id/ef_location"
    style="@style/medium_text"
    android:gravity="center"
    android:text="@string/location"/>

  <TextView
    android:id="@+id/ef_gm"
    style="@style/medium_text"
    android:gravity="center"
    android:text="@string/gm"/>

  <TextView
    android:id="@+id/ef_format"
    style="@style/medium_text"
    android:gravity="center"
    android:text="@string/format"/>

  <TextView
    android:id="@+id/ef_class"
    style="@style/medium_text"
    android:gravity="center"
    android:text="@string/class_string"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
      android:id="@+id/ef_preview_link"
      style="@style/text_with_link"
      android:layout_weight="1"
      android:text="@string/preview"
      android:visibility="invisible"/>

    <TextView
      android:id="@+id/ef_report_link"
      style="@style/text_with_link"
      android:layout_weight="1"
      android:gravity="right"
      android:text="@string/report"
      android:visibility="invisible"/>
  </LinearLayout>
</LinearLayout>