<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/menu_search"
    android:actionViewClass="android.widget.SearchView"
    android:icon="@drawable/ic_action_search"
    android:showAsAction="collapseActionView|ifRoom"
    android:title="@string/search"/>
  <item
    android:id="@+id/menu_map"
    android:showAsAction="never"
    android:title="@string/map"/>
  <item
    android:id="@+id/menu_help"
    android:showAsAction="never"
    android:title="@string/activity_help"/>
  <item
    android:id="@+id/menu_about"
    android:showAsAction="never"
    android:title="@string/activity_about"/>
  <item
    android:id="@+id/menu_filter"
    android:showAsAction="never"
    android:title="@string/activity_filter"/>
  <item
    android:id="@+id/menu_settings"
    android:showAsAction="never"
    android:title="@string/activity_settings"/>
</menu>