<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/menu_search"
    android:icon="@drawable/ic_search_white_36dp"
    android:searchSuggestAuthority="org.boardgamers.wbc.SearchSuggestionsProvider"
    android:searchSuggestIntentAction="android.Intent.action.VIEW"
    android:title="@string/search"
    app:actionViewClass="android.support.v7.widget.SearchView"
    app:showAsAction="collapseActionView|ifRoom"/>
  <item
    android:id="@+id/menu_map"
    android:icon="@drawable/ic_room_white_36dp"
    android:title="@string/map"
    app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/menu_help"
    android:icon="@drawable/ic_help_white_36dp"
    android:title="@string/activity_help"
    app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/menu_about"
    android:icon="@drawable/ic_info_white_36dp"
    android:title="@string/activity_about"
    app:showAsAction="ifRoom"/>
  <!--<item-->
    <!--android:id="@+id/menu_filter"-->
    <!--android:title="@string/activity_filter"-->
    <!--app:showAsAction="ifRoom"/>-->
  <item
    android:id="@+id/menu_settings"
    android:icon="@drawable/ic_settings_white_36dp"
    android:title="@string/activity_settings"
    app:showAsAction="ifRoom"/>
</menu>