<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"

              android:gravity="center_vertical"
              android:orientation="horizontal">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="1dip"
		android:layout_margin="@dimen/activity_margin"
		android:background="@drawable/star_off"
		android:contentDescription="@string/star"
		android:visibility="invisible"/>

	<TextView
		style="@style/list_item"
		android:layout_width="0dip"
		android:layout_height="wrap_content"
		android:layout_weight="8"
		android:text="@string/event"/>

	<View style="@style/div_v"/>

	<RelativeLayout
		android:layout_width="0dip"
		android:layout_height="match_parent"
		android:layout_weight="3">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:contentDescription="@string/duration"
			android:src="@drawable/timer_icon"/>
	</RelativeLayout>

	<View style="@style/div_v"/>

	<TextView
		style="@style/list_item"
		android:layout_marginRight="@dimen/activity_margin"
		android:layout_weight="4"
		android:gravity="center_vertical|right"
		android:text="@string/location"/>
</LinearLayout>
