<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/default_margin">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<EditText
			android:id="@+id/ce_title"
			style="@style/medium_text"
			android:layout_marginTop="@dimen/layout_margin_small"
			android:hint="@string/title"
			android:imeOptions="actionNext"
			android:singleLine="true"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="@dimen/layout_margin_large"
			android:orientation="horizontal">

			<TextView
				style="@style/medium_text"
				android:layout_width="wrap_content"
				android:layout_marginLeft="@dimen/default_margin"
				android:layout_marginRight="@dimen/default_margin"
				android:text="@string/ce_at"/>

			<Spinner
				android:id="@+id/ce_hour"
				style="@style/medium_text"
				android:layout_width="wrap_content"
				android:layout_marginLeft="@dimen/default_margin"
				android:layout_marginRight="@dimen/default_margin"/>

			<TextView
				style="@style/medium_text"
				android:layout_width="wrap_content"
				android:layout_marginLeft="@dimen/default_margin"
				android:layout_marginRight="@dimen/default_margin"
				android:text="@string/ce_for"/>

			<Spinner
				android:id="@+id/ce_duration"
				style="@style/medium_text"
				android:layout_width="wrap_content"
				android:layout_marginLeft="@dimen/default_margin"
				android:layout_marginRight="@dimen/default_margin"/>

			<TextView
				style="@style/medium_text"
				android:layout_width="wrap_content"
				android:layout_marginLeft="@dimen/default_margin"
				android:layout_marginRight="@dimen/default_margin"
				android:text="@string/ce_hours"/>
		</LinearLayout>

		<EditText
			android:id="@+id/ce_location"
			style="@style/medium_text"
			android:layout_marginTop="@dimen/layout_margin_large"
			android:hint="@string/location"
			android:imeOptions="actionDone"
			android:singleLine="true"/>

		<TextView
			android:id="@+id/ce_days"
			style="@style/medium_text"
			android:layout_marginTop="@dimen/layout_margin_large"
			android:gravity="center"
			android:text="@string/ce_days"/>

		<LinearLayout
			android:id="@+id/ce_days_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/layout_margin_small"
			android:baselineAligned="false"
			android:orientation="horizontal">

			<LinearLayout
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="vertical">

				<CheckBox
					android:id="@+id/ce_repeat_d0"
					style="@style/medium_text"/>

				<CheckBox
					android:id="@+id/ce_repeat_d1"
					style="@style/medium_text"/>

				<CheckBox
					android:id="@+id/ce_repeat_d2"
					style="@style/medium_text"/>

				<CheckBox
					android:id="@+id/ce_repeat_d3"
					style="@style/medium_text"/>

				<CheckBox
					android:id="@+id/ce_repeat_d4"
					style="@style/medium_text"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="vertical">

				<CheckBox
					android:id="@+id/ce_repeat_d5"
					style="@style/medium_text"/>

				<CheckBox
					android:id="@+id/ce_repeat_d6"
					style="@style/medium_text"/>

				<CheckBox
					android:id="@+id/ce_repeat_d7"
					style="@style/medium_text"/>

				<CheckBox
					android:id="@+id/ce_repeat_d8"
					style="@style/medium_text"/>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			style="?android:attr/buttonBarStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/ce_cancel"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="0dip"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/cancel"/>

			<Button
				android:id="@+id/ce_add"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="0dip"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/add"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
